--- a/AkramSaadiCV.tex
+++ b/AkramSaadiCV.tex
@@ -1,4 +1,4 @@
-\documentclass[a4paper,11pt]{article} % Set global font size to 11pt
+\documentclass[a4paper,11pt]{article}
 \usepackage[utf8]{inputenc}
 \usepackage[top=0.5in, bottom=0in, left=0in, right=0.65in]{geometry}
 \usepackage{paracol}
